--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 %%% -*- mode: erlang -*
 {cover_enabled, true}.
-{require_otp_vsn,"R14"}.
+{require_otp_vsn,"R14|R15"}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 {erl_opts, [debug_info]}.
